--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ihikepakistan
-description: A new Flutter project.
+description: Hiking in Pakistan made easy.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -15,14 +15,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.3.3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  http: ^0.12.1 #ios:none
-  shared_preferences: ^0.5.7+3 #ios:none
+  # http: ^0.12.1 #ios:none
+  # shared_preferences: ^0.5.7+3 #ios:none
   carousel_slider: ^2.2.1 #ios:none
   photo_view: ^0.9.2 #ios:none
   url_launcher: ^5.4.11 #ios:none
@@ -37,6 +37,8 @@ dependencies:
   maps_toolkit: ^1.1.0+2 #ios:none
   flutter_ringtone_player: ^2.0.0 #ios:none
   firebase_messaging: ^7.0.3 #ios:todo: https://pub.dev/packages/firebase_messaging
+  search_page: ^1.3.0 #ios:none
+  toast: ^0.1.5
 
 
   flutter:
