--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.3.3
+version: 0.3.4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  # http: ^0.12.1 #ios:none
+  http: ^0.12.1 #ios:none
   # shared_preferences: ^0.5.7+3 #ios:none
   carousel_slider: ^2.2.1 #ios:none
   photo_view: ^0.9.2 #ios:none
@@ -39,6 +39,8 @@ dependencies:
   firebase_messaging: ^7.0.3 #ios:todo: https://pub.dev/packages/firebase_messaging
   search_page: ^1.3.0 #ios:none
   toast: ^0.1.5
+  share: ^0.6.5+4
+  path_provider: ^1.6.22
 
 
   flutter:
@@ -78,7 +80,7 @@ flutter:
      - maps/Trail 5-C.png
      - maps/Trail 5-Spring.png
      - maps/Trail 5-A.png
-     - maps/Shah Allah Ditta to Khanpur dam.png
+     - maps/Shah Allah Ditta to Khanpur Lake.png
      - maps/Second Ridge Trail.png
      - maps/Trail 2.png
      - maps/Gandhian Ridge Trail.png
