--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,7 @@ android {
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        //ndk { debugSymbolLevel 'FULL' }
     }
 
     signingConfigs {
