--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.3.6
+version: 0.3.6+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -25,7 +25,7 @@ dependencies:
   # shared_preferences: ^0.5.7+3 #ios:none
   carousel_slider: ^2.2.1 #ios:none
   photo_view: ^0.9.2 #ios:none
-  url_launcher: ^5.4.11 #ios:none
+  url_launcher: ^5.7.8 #ios:none
   flutter_share_me: ^0.9.1 #ios:none
   flutter_compass: '^0.4.1' #ios:done
   firebase_analytics: ^5.0.16 #ios:none
@@ -42,6 +42,8 @@ dependencies:
   share: ^0.6.5+4
   path_provider: ^1.6.22
   carp_background_location: ^1.0.2+1
+  in_app_purchase: ^0.3.4+16
+  #in_app_review: ^1.0.2
 
 
   flutter:
