--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,9 @@ dependencies:
   share: ^0.6.5+4
   path_provider: ^1.6.22
   carp_background_location: ^1.0.2+1
-  in_app_purchase: ^0.3.4+16
+  #in_app_purchase: ^0.3.4+16
   #in_app_review: ^1.0.2
-  js: ^0.6.2
+  #js: ^0.6.2
 
 
   flutter:
