--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ environment:
 
 dependencies:
   http: ^0.12.1 #ios:none
-  # shared_preferences: ^0.5.7+3 #ios:none
+  shared_preferences: ^0.5.7+3 #ios:none
   carousel_slider: ^2.2.1 #ios:none
   photo_view: ^0.9.2 #ios:none
   url_launcher: ^5.7.8 #ios:none
@@ -41,7 +41,7 @@ dependencies:
   toast: ^0.1.5
   share: ^0.6.5+4
   path_provider: ^1.6.22
-  carp_background_location: ^1.0.2+1
+  #carp_background_location: ^1.0.2+1
   #in_app_purchase: ^0.3.4+16
   #in_app_review: ^1.0.2
   #js: ^0.6.2
