Update shareTile and speed up map loading

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   share: ^0.6.5+4
   path_provider: ^1.6.22
   cached_network_image: ^2.5.0
+  clipboard: ^0.1.2+8
   #carp_background_location: ^1.0.2+1
   #in_app_purchase: ^0.3.4+16
   #in_app_review: ^1.0.2
