Change main menu (0.4.3)

--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,9 @@
         "**/.*",
         "**/node_modules/**"
       ],
+      "appAssociation": "AUTO",
       "rewrites": [
+        { "source": "/hikes/**", "dynamicLinks": true },
         {
           "source": "**",
           "destination": "/index.html"
