--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.4.3+7
+version: 0.4.4+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -74,8 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/logo.png
-     - assets/logo_small.png
+     - assets/icon_small.png
      - assets/twitter_small.png
      - assets/whatsapp_small.png
      - assets/facebook_small.png
