--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.4.6+10
+version: 0.5.0+12
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-#  http: ^0.12.1 #ios:none
+  http: ^0.12.2 #ios:none
   shared_preferences: ^0.5.7+3 #ios:none
   carousel_slider: ^2.2.1 #ios:none
   photo_view: ^0.9.2 #ios:none
@@ -78,7 +78,6 @@ flutter:
      - assets/twitter_small.png
      - assets/whatsapp_small.png
      - assets/facebook_small.png
-     - maps/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
