Implement ad blocks

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="Ihike Pakistan"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8065750617902524~3204884661"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
