Add in app purchases and add statistics features and solve map load problems (though still not ideal).

--- a/repo/firebase.json
+++ b/repo/firebase.json
@@ -9,7 +9,7 @@
     ],
     "headers": [
       {
-        "source": "**/*json",
+        "source": "**/*",
         "headers": [
           {
             "key": "Access-Control-Allow-Origin",
