--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.3+15
+version: 1.1.0+17
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -34,7 +34,7 @@ dependencies:
   mapbox_gl: ^0.10.0 #ios:todo: https://docs.mapbox.com/ios/maps/overview/#add-the-dependency
   firebase_remote_config: ^0.4.0+2 #ios:todo
   provider: ^4.3.2+2 #ios:none
-  # maps_toolkit: ^1.1.0+2 #ios:none
+  maps_toolkit: ^1.1.0+2
 #  flutter_ringtone_player: ^2.0.0 #ios:none
   firebase_messaging: ^7.0.3 #ios:todo: https://pub.dev/packages/firebase_messaging
   search_page: ^1.3.0 #ios:none
@@ -44,7 +44,8 @@ dependencies:
   cached_network_image: ^2.5.0
   clipboard: ^0.1.2+8
   #carp_background_location: ^1.0.2+1
-  #in_app_purchase: ^0.3.4+16
+  in_app_purchase: ^0.5.1
+  carp_background_location: ^1.0.2+1
   #in_app_review: ^1.0.2
   #js: ^0.6.2
 
