--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   firebase_remote_config: ^0.4.0+2 #ios:todo
   provider: ^4.3.2+2 #ios:none
   maps_toolkit: ^1.1.0+2
-#  flutter_ringtone_player: ^2.0.0 #ios:none
+  flutter_ringtone_player: ^2.0.0 #ios:none
   firebase_messaging: ^7.0.3 #ios:todo: https://pub.dev/packages/firebase_messaging
   search_page: ^1.3.0 #ios:none
   toast: ^0.1.5
